added some things in css

--- a/Homepage.html
+++ b/Homepage.html
@@ -208,7 +208,7 @@
                 </div>
             </div>
             <div class="img-sec">
-                <img class="posted-img" src="images/events-1.jpg" alt="">
+                <img class="posted-img" src="images/events-1.png" alt="">
             </div>
             <div class="social">
                 <div class="social-box">
