changed a lot in feed html and css

--- a/Feed.html
+++ b/Feed.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="nav">
-            <span class="nav-logo" onclick="window.location.href='index2.html';">Artisty</span>
+            <span class="nav-logo" onclick="window.location.href='index2.html';">Artistey</span>
             <div class="nav-search">
                 <input type="text" class="search" placeholder="search your favourite atrists & more">
                 
@@ -237,9 +237,9 @@
                 <div class="profile-sec">
                     <img class="feed-container-profile-img" src="images/chefs-2.jpg" alt="">
                     <div class="profile-details">
-                        <h1>Michael Ray</h1>
-                        <p>Enchanting Memory that was taken on our recent trip</p>
-                        <span class="time-stamp-mobile"> -- 10 min</span>
+                        <h1>Elon Musk</h1>
+                        <p>People waiting for the bus at a stop</p>
+                        <span class="time-stamp-mobile"> -- 15 min</span>
 
                     </div>
                 </div>
@@ -278,9 +278,9 @@
                 <div class="profile-sec">
                     <img class="feed-container-profile-img" src="images/chefs-3.jpg" alt="">
                     <div class="profile-details">
-                        <h1>Michael Ray</h1>
-                        <p>Enchanting Memory that was taken on our recent trip</p>
-                        <span class="time-stamp-mobile"> -- 10 min</span>
+                        <h1>Paul Allen</h1>
+                        <p>Wallpaper kind of photo clicked</p>
+                        <span class="time-stamp-mobile"> -- 23 min</span>
                     </div>
                 </div>
                 <div class="time-stamp">
