linked feed to login and signup page

--- a/Feed.html
+++ b/Feed.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="nav">
-            <span class="nav-logo" onclick="window.location.href='index2.html';">Artistey</span>
+            <span class="nav-logo" onclick="window.location.href='index.html';">Artistey</span>
             <div class="nav-search">
                 <input type="text" class="search" placeholder="search your favourite atrists & more">
                 
